--- a/data/css/styles.css
+++ b/data/css/styles.css
@@ -68,18 +68,32 @@
   margin-top: 20px;
 }
 
-.doc-score {
-}
-
-.doc-date {
-}
-
-.doc-ref {
-}
-
 .doc-body {
   display: inline-block;
   margin-top: 10px;
+}
+
+.doc-header {
+  position: relative;
+  max-width: 600px;
+}
+
+.doc-score {
+}
+
+.doc-ref {
+  display: inline-block;
+  max-width: 500px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.doc-date {
+  position: absolute;
+  font-size: smaller;
+  right: -50px;
+  top: 2px;
 }
 
 .doc-image {
@@ -87,8 +101,24 @@
   height: 50px;
 }
 
+
 .doc-summary {
   max-width: 600px;
   float: right;
   margin-left: 20px;
+  max-height: 60px;
+  overflow: hidden;
+}
+
+.doc-extra-img {
+  width: 15px;
+  height: 15px;
+  position: absolute;
+  margin-top: -8px;
+  margin-left: -8px;
+}
+
+.doc-extra-term {
+  font-style: italic;
+  margin-right: 20px;
 }
