Refactored about:news into multiple views

--- a/data/css/styles.css
+++ b/data/css/styles.css
@@ -8,7 +8,6 @@
 .feed-cell:first-child {padding: 4px;}
 .feed-cell span {padding: 4px;}
 .error-message {font-size: large; color: red;}
-.mainContent {padding-top: 10px; position: relative;}
 .inactive-tab {color: red; border-bottom: 1px solid black;}
 .active-tab {color: blue; border: 1px solid black; border-bottom: 1px solid white;}
 .tab-label {position: relative; margin-bottom: -1px;}
@@ -20,6 +19,13 @@
   display: -moz-inline-box;
   position: relative;
   margin-left: -1px;
+}
+
+.mainContent {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 30px;
+  position: relative;
 }
 
 .scored-results {
@@ -138,4 +144,11 @@
 }
 
 .page-walk-pnum {
+}
+
+.navigate {
+  position: relative;
+  margin-bottom: 10px;
+  border-bottom: 1px solid;
+  font-size: larger;
 }
